# recruitment-fastapi

./: README.md  docker-compose.yml  pyproject.toml
app/: .env-example  main.py
app/config/: db_config.py
app/controller/: candidate_controller.py  user_controller.py
app/dtos/: candidate_dto.py  user_dto.py
app/helper/: token_helper.py
app/models/: candidate.py  user.py
app/repository/: candidate_repository.py  user_repository.py
app/routes/: candidate_routes.py  user_routes.py
app/service/: candidate_service.py  user_service.py
tests/: test_candidate.py  test_user.py
